# auditshield

./: .env.example  .gitignore  .spacesconfig.yaml  ARCHITECTURE.md  CURSORRULES-AUDITSHIELD-LIVE.md  CURSORRULES-SOVEREIGNSHIELD-DESKTOP.md  CURSORRULES-SOVEREIGNSHIELD-MOBILE.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  EFFORT-ENGINE-STATUS.md  MAKE_COM_WEBHOOK.md  PHASE2_APP_PATCHES.txt  PRE_FLIGHT_EXECUTION_GUIDE.md  README.md  READY_TO_EXECUTE.md  REPOSITORY_REORGANIZATION_QUICK_START.md  STARGUARD_REORGANIZATION.md  USER_GUIDE.md  __init__.py  app.py  app_complete.py  app_config.py  app_huggingface.py  audit_trail.py  auditshield_platform_integration.py  avatar_base64.py  chart_selection_ai.py  cloud_status_badge.py  compliance_forecasting.py  dashboard_manager.py  database.py  database_phase2_schema.py  database_phase3_schema.py  deploy.sh  deploy_to_huggingface.py  deploy_to_huggingface.sh  education_automation.py  emr_rule_builder.py  financial_calculator.py  hcc_reconciliation.py  (+25 more)
.github/workflows/: ci.yml  deploy.yml
Artifacts/: DEMO_VIDEO_SCRIPT.md  DEPLOYMENT_CHECKLIST.md
Artifacts/tests/: test_integration.py
Artifacts/www/: auditshield_services.html  mobile.css  starguard_about.html  starguard_services.html
tests/: test_auditshield.py  test_integration.py  test_mobile.py
ui/: __init__.py  fab_wiring.py  mobile_badge.py  nav_mobile.py
ui/mobile/: __init__.py  audit_stepper_mobile.py  dashboard_mobile.py  hedis_table_mobile.py  rag_mobile.py
